--- a/opensmtpd/index.html
+++ b/opensmtpd/index.html
@@ -43,9 +43,9 @@
 Релиз <a href="https://www.opensmtpd.org/announces/release-7.3.0p0.txt">OpenSMTPD 7.3</a>
 состоялся 17 июня 2023 года<br>
 Последний minor release
-<a href="https://www.opensmtpd.org/archives/opensmtpd-7.3.0p1.tar.gz">OpenSMTPD 7.3.0p1</a>
-[<a href="https://www.opensmtpd.org/archives/opensmtpd-7.3.0p1.sum.sig">sha256</a>]
-состоялся 30 июня 2023 года
+<a href="https://www.opensmtpd.org/archives/opensmtpd-7.3.0p2.tar.gz">OpenSMTPD 7.3.0p2</a>
+[<a href="https://www.opensmtpd.org/archives/opensmtpd-7.3.0p2.sum.sig">sha256</a>]
+состоялся 20 сентября 2023 года
 
 <p>
 OpenSMTPD представляет из себя <strong>СВОБОДНУЮ</strong>
