[1.77] translation - openssh/specs.html

--- a/openssh/specs.html
+++ b/openssh/specs.html
@@ -23,12 +23,12 @@
 <h3>Основные RFC второй версии протокола SSH</h3>
 
 <p>
-Source: <a href="https://datatracker.ietf.org/wg/secsh/">secsh working group</a>
+Источник: <a href="https://datatracker.ietf.org/wg/secsh/">secsh working group</a>
 
 <table>
   <tr>
-    <th>Specification
-    <th>Description
+    <th>Спецификация
+    <th>Описание
   <tr>
     <td><a href=https://tools.ietf.org/html/rfc4250>RFC4250</a>
     <td>SSH Protocol Assigned Numbers
@@ -56,9 +56,9 @@ Source: <a href="https://datatracker.ietf.org/wg/secsh/">secsh working group</a>
 
 <table>
   <tr>
-    <th>Specification
-    <th>Versions
-    <th>Description
+    <th>Спецификация
+    <th>Версия
+    <th>Описание
   <tr>
     <td><a href=https://tools.ietf.org/html/rfc4255>RFC4255</a>
         <a href="https://www.rfc-editor.org/errata_search.php?rfc=4255"
@@ -167,9 +167,9 @@ Source: <a href="https://datatracker.ietf.org/wg/secsh/">secsh working group</a>
 <h3>DRAFT-спецификации (черновики, не опубликованные версии) для второй версии протокола SSH</h3>
 <table>
   <tr>
-    <th>Specification
-    <th>Versions
-    <th>Description
+    <th>Спецификация
+    <th>Версия
+    <th>Описание
   <tr>
     <td><a href="https://tools.ietf.org/html/draft-ietf-secsh-filexfer-02"
       >draft-ietf-secsh-filexfer-02</a>
@@ -206,9 +206,9 @@ Source: <a href="https://datatracker.ietf.org/wg/secsh/">secsh working group</a>
 <h3>Дополнения от производителей для второй версии протокола SSH</h3>
 <table>
   <tr>
-    <th>Specification
-    <th>Versions
-    <th>Description
+    <th>Спецификация
+    <th>Версия
+    <th>Описание
   <tr>
     <td><a
       href="https://cvsweb.openbsd.org/src/usr.bin/ssh/PROTOCOL?annotate=HEAD"
@@ -324,8 +324,8 @@ Source: <a href="https://datatracker.ietf.org/wg/secsh/">secsh working group</a>
 <h3>Другие спецификации</h3>
 <table>
   <tr>
-    <th>Specification
-    <th>Description
+    <th>Спецификация
+    <th>Описание
   <tr>
     <td><a href="https://openssh.com/txt/socks4.protocol">socks4.protocol</a>
     <td>SOCKS protocol version 4.  Used for <code>ssh(1) DynamicForward</code>.
