[1.83] rpki-client 8.5 - rpki-client/portable.html

--- a/rpki-client/portable.html
+++ b/rpki-client/portable.html
@@ -16,7 +16,7 @@
 <hr>
 
 <p>
-Портированная версия rpki-client 8.4 вышла 2 мая 2023 года.
+Портированная версия rpki-client 8.5 вышла 29 июля 2023 года.
 
 <p>
 Портированная версия rpki-client работает и на нескольких других UNIX системах,
@@ -33,8 +33,8 @@
 
 <p>
 rpki-client работат на всех операционных системах, где есть библиотека libcrypto,
-основанная на OpenSSL 1.1 или LibreSSL 3.5, и библиотека libtls, совместимая
-с LibreSSL 3.5 или более новой.
+основанная на OpenSSL 1.1 или LibreSSL 3.5, библиотеке libtls, совместимой
+с LibreSSL 3.5 или более новой, и zlib.
 
 <p>
 На момент написания портированная версия rpki-client собиралась и работала на
