--- a/errata.html
+++ b/errata.html
@@ -84,4 +84,5 @@
 <a href="https://www.openbsd.org/errata70.html">7.0</a>,
 <a href="https://www.openbsd.org/errata71.html">7.1</a>,
 <a href="https://www.openbsd.org/errata72.html">7.2</a>,
-<a href="https://www.openbsd.org/errata73.html">7.3</a>.
+<a href="https://www.openbsd.org/errata73.html">7.3</a>,
+<a href="https://www.openbsd.org/errata77.html">7.3</a>.
