[1.481] OpenBGPD 8.2 - openbgpd/ftp.html

--- a/openbgpd/ftp.html
+++ b/openbgpd/ftp.html
@@ -16,7 +16,7 @@
 <hr>
 
 <p>
-Релиз портированной версии OpenBGPD 8.0 состоялся 4 мая 2023 года.
+Релиз портированной версии OpenBGPD 8.2 состоялся 2 октября 2023 года.
 
 <p>
 Портированная OpenBGPD - это версия/порт для других операционных систем.
