--- a/openssh/index.html
+++ b/openssh/index.html
@@ -51,8 +51,8 @@
  
 <p id="callout">
 
-Релиз <a href="https://www.openbsd.org/openssh/releasenotes.html#9.4p1">OpenSSH 9.4</a>
-состоялся 10 августа 2023 года
+Релиз <a href="https://www.openbsd.org/openssh/releasenotes.html#9.5p1">OpenSSH 9.5</a>
+состоялся 4 октября 2023 года
 
 <p>
 OpenSSH это основной инструмент для создания соединений
