[1.84] rpki-client 8.6 release - rpki-client/portable.html

--- a/rpki-client/portable.html
+++ b/rpki-client/portable.html
@@ -16,7 +16,7 @@
 <hr>
 
 <p>
-Портированная версия rpki-client 8.5 вышла 29 июля 2023 года.
+Портированная версия rpki-client 8.6 вышла 4 октября 2023 года.
 
 <p>
 Портированная версия rpki-client работает и на нескольких других UNIX системах,
