--- a/security.html
+++ b/security.html
@@ -81,7 +81,8 @@ h3 {
 <a href="https://openbsd.org/errata70.html">7.0</a>,
 <a href="https://openbsd.org/errata71.html">7.1</a>,
 <a href="https://openbsd.org/errata72.html">7.2</a>,
-<a href="https://openbsd.org/errata73.html">7.3</a>.
+<a href="https://openbsd.org/errata73.html">7.3</a>,
+<a href="https://openbsd.org/errata74.html">7.4</a>.
 <br>
 <hr>
 
