[1.91] update link to filter.html - faq/pf/index.html

--- a/faq/pf/index.html
+++ b/faq/pf/index.html
@@ -23,7 +23,7 @@ PF: Пакетный фильтр OpenBSD
 	<li><a href="config.html"                              >Начинаем работать с PF</a>
 	<li><a href="macros.html"                              >Списки и макросы</a>
 	<li><a href="tables.html"                              >Таблицы</a>
-	<li><a href="https://openbsd.org/faq/pf/filter.html"   >Фильтрация пакетов</a>
+	<li><a href="filter.html"                              >Фильтрация пакетов</a>
 	<li><a href="nat.html"                                 >Преобразование сетевых адресов (NAT)</a>
 	<li><a href="https://openbsd.org/faq/pf/rdr.html"      >Перенаправление трафика (проброс портов)</a>
 	<li><a href="https://openbsd.org/faq/pf/shortcuts.html">Сокращения для написания правил</a>
