[1.68] update link to filter.html - faq/pf/config.html

--- a/faq/pf/config.html
+++ b/faq/pf/config.html
@@ -74,7 +74,7 @@ PF считывает свою конфигурацию из файла
   <li><a href="tables.html">Таблицы</a>: структура, используемая
     для хранения списков IP-адресов.
   <li><a href="options.html">Опции</a>: различные опции контроля работы PF.
-  <li><a href="https://www.openbsd.org/faq/pf/filter.html">Правила фильтрации</a>:
+  <li><a href="filter.html">Правила фильтрации</a>:
     разрешают выборочную фильтрацию или блокировку пакетов при их прохождении через любой из
     интерфейсов.
 </ul>
