[1.555] update link to pf/filter.html - faq/index.html

--- a/faq/index.html
+++ b/faq/index.html
@@ -200,7 +200,7 @@ XXX  -->
   <li><a href="pf/config.html"                               >Начинаем работать с PF</a>
   <li><a href="pf/macros.html"                               >Списки и Макросы</a>
   <li><a href="pf/tables.html"                               >Таблицы</a>
-  <li><a href="https://www.openbsd.org/faq/pf/filter.html"   >Фильтрация пакетов</a>
+  <li><a href="pf/filter.html"                               >Фильтрация пакетов</a>
   <li><a href="pf/nat.html"                                  >Преобразование сетевых адресов (NAT)</a>
   <li><a href="https://www.openbsd.org/faq/pf/rdr.html"      >Перенаправление трафика (Port Forwarding)</a>
   <li><a href="https://www.openbsd.org/faq/pf/shortcuts.html">Сокращения для написания правил</a>
