[1.758] adding link to openbsd.org.ru - index.html

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 	<li><a href="https://t.me/openbsd_ru">telegram канал</a>
 	<li><a href="https://vk.com/openbsd_hackers">Группа в VK</a>
 	<li><a href="https://github.com/openbsd-ru">Проект на GitHub</a>
+	<li><a href="https://openbsd.org.ru">openbsd.org.ru</a>
 </ul>
 
 </nav>
