[1.759] OpenBSD 7.4 release - index..html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	<li><a href="https://www.openbsd.org/plus.html">Changelog</a>
 	<li><a href="faq/index.html">FAQ</a>
 	<li><a href="https://man.openbsd.org">Man-страницы</a>
-	<li><a href="https://www.openbsd.org/errata73.html">Патчи</a>
+	<li><a href="https://www.openbsd.org/errata74.html">Патчи</a>
 	<li><a href="report.html">Сообщить об ошибке</a>
 	<li><a href="mail.html">Почтовые рассылки</a>
 	<li><a href="https://www.openbsd.org/lyrics.html">Песни</a> &amp;
@@ -68,8 +68,8 @@
 <article>
 
 <h2>
-	<a href="https://www.openbsd.org/73.html">
-	<img src="images/puffy73.gif" alt="[OpenBSD 7.3]" height=198 width=599>
+	<a href="https://www.openbsd.org/74.html">
+	<img src="images/puffy74.gif" alt="[OpenBSD 7.4]" height=198 width=599>
 	</a>
 </h2>
 
@@ -95,8 +95,8 @@ OpenBSD доступна для скачивания с нашей
 
 <p>
 Последняя версия,
-<a href="https://www.openbsd.org/73.html">OpenBSD 7.3</a>,
-вышла 10 апреля 2023 года. Это 54'й релиз.
+<a href="https://www.openbsd.org/74.html">OpenBSD 7.4</a>,
+вышла 16 октября 2023 года. Это 55'й релиз.
 
 <p>
 OpenBSD разрабатывается добровольцами. Процесс разработки,
